err/pyroblox.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/bs4-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyRoblox-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pyroblox'...
Listing './lib/python3.5/site-packages/pyroblox/groups'...
Compiling './lib/python3.5/site-packages/pyroblox/groups/auditItem.py'...
***   File "./lib/python3.5/site-packages/pyroblox/groups/auditItem.py", line 166
    return f"({self.__class__.__name__}) From {self.user} On {self.target} Message: \"{self.postText}\""
                                                                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyroblox/groups/auditLog.py'...
***   File "./lib/python3.5/site-packages/pyroblox/groups/auditLog.py", line 37
    url = f"https://www.roblox.com/Groups/Audit.aspx?groupid={self.groupId}"
                                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyroblox/groups/group.py'...
***   File "./lib/python3.5/site-packages/pyroblox/groups/group.py", line 15
    url = f"https://api.roblox.com/users/{user.userId}/groups"
                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyroblox/groups/groupConfig.py'...
***   File "./lib/python3.5/site-packages/pyroblox/groups/groupConfig.py", line 13
    url = f"https://www.roblox.com/my/groupadmin.aspx?gid={self.group.groupId}"
                                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyroblox/groups/memberManager.py'...
***   File "./lib/python3.5/site-packages/pyroblox/groups/memberManager.py", line 63
    url = f"https://groups.roblox.com/v1/groups/{self.group.groupId}/roles/{rankId}/users"
                                                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyroblox/groups/socialManager.py'...
***   File "./lib/python3.5/site-packages/pyroblox/groups/socialManager.py", line 36
    url = f"https://www.roblox.com/my/groups.aspx?gid={self.group.groupId}"
                                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyroblox/reportManager.py'...
***   File "./lib/python3.5/site-packages/pyroblox/reportManager.py", line 25
    url = f"https://www.roblox.com/abusereport/groupwallpost?id={post.id}"
                                                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyroblox/users'...
Compiling './lib/python3.5/site-packages/pyroblox/users/user.py'...
***   File "./lib/python3.5/site-packages/pyroblox/users/user.py", line 28
    url = f"https://www.roblox.com/users/{user.userId}/profile"
                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
